    - when the dist-upgrade calculation fails, show the reason
      why in the error dialog (LP: #281286)
    - when a meta package can not be upgraded, show a proper
      error message with the package in question
  * DistUpgrade/DistUpgradeQuirks.py:
    - abort ugprade from hardy if evms is used in /proc/mounts
      evms got removed from the archive in intrepid (LP: #292179)
  * DistUpgrade/removal_blacklist.cfg:
    - remove overly broad postgresql regexp
  * DistUpgrade/DistUpgradeCache.py:
    - do not limit the removal blacklist to downloadable packages,
      this limits it too much

 --

update-manager (1:0.95) jaunty; urgency=low

  * updated for jaunty

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 05 Nov 2008 09:56:51 +0100

update-manager (1:0.93.34) intrepid-proposed; urgency=low

  * UpdateManager/UpdateManager.py:
    - simply the changelog download logic and make changelog
      fetching work properly again (now that the server side
      got improved as well) LP: #40058

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 04 Nov 2008 18:53:54 +0100

update-manager (1:0.93.33) intrepid; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeQuirks.py:
    - add detection for cards no longer supported via fglrx 
      and ensure transition to "ati" (LP: #284408) 
  * DistUpgrade/DistUpgradeCache.py:
    - check if the package is actually downloadable in the 
      removal blacklist checking (LP: #293486)

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py:
    - handle translations of non-ascii string on Cancel button 
      correctly (LP: #291115)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 04 Nov 2008 14:58:10 +0100

update-manager (1:0.93.32) intrepid; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - when transitioning from kubuntu-kde4-desktop to kubuntu-desktop
      consider key dependencies as well even if kubuntu-kde4-desktop
      is no longer installed (LP: #277285)
