@@ -12,6 +12,8 @@ update-manager (1:0.95.1) jaunty; urgency=low
   * DistUpgrade/DistUpgradeQuirks.py:
     - abort ugprade from hardy if evms is used in /proc/mounts
       evms got removed from the archive in intrepid (LP: #292179)
+    - do not add "relatime" if "noatime" is already given (thanks
+      to  Ken Geis)
   * DistUpgrade/removal_blacklist.cfg:
     - remove overly broad postgresql regexp
   * DistUpgrade/DistUpgradeCache.py:
